# cargo-gccrs

./: .gitignore  Cargo.toml  README.md
.github/: bors.toml
.github/workflows/: build_test_fmt.yml  fmt_build_tests.yml
src/: args.rs  bin-driver.rs  bin-wrapper.rs  config.rs  error.rs  gccrs.rs  lib.rs  main.rs  rustc_args.rs
src/gccrs/: args.rs  config.rs  env_args.rs  error.rs  mod.rs  rustc_args.rs  rustc_options.rs
tests/: functional_tests.rs  test_harness.rs
tests/basic_rust_project/: Cargo.toml  main.c
tests/binary_project/: Cargo.toml
tests/invalid_code/: Cargo.toml
tests/invalid_code/src/: main.rs
tests/rustflags_project/: Cargo.toml
tests/rustflags_project/src/: main.rs
tests/shared_library/: Cargo.toml
tests/shared_library/src/: lib.rs
tests/static_lib/: Cargo.toml
tests/static_lib/src/: lib.rs
tests/warning_project/: Cargo.toml
tests/warning_project/src/: main.rs
