[package]
name = "cargo-gccrs"
version = "0.0.1"
authors = ["Arthur Cohen <cohenarthur.dev@gmail.com"]
edition = "2018"
description = "Adding gccrs support to the cargo build system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rust-GCC/cargo-gccrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "cargo-gccrs"
path = "src/bin-wrapper.rs"

[[bin]]
name = "gccrs-driver"
path = "src/bin-driver.rs"

[dev-dependencies]
tempdir = "0.3"
goblin = "0.4"
ar = "0.8"
is_executable = "1.0.1"
