[package]
name = "cargo-gccrs"
version = "0.0.1"
authors = ["Arthur Cohen <cohenarthur.dev@gmail.com"]
edition = "2018"
description = "Adding gccrs support to the cargo build system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rust-GCC/cargo-gccrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
which = "4.1"

[dev-dependencies]
tempdir = "0.3"
goblin = "0.4"
ar = "0.8"
is_executable = "1.0.1"
